[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deeptangle"
version = "0.1.0"
description = "A detection network capable of handling numerous overlapping spline bodies in high-density microscopy data."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Albert Alonso", email = "albert.alonso@nbi.ku.dk" },
    { name = "Julius B. Kirkegaard", email = "juki@di.ku.dk" }
]
dependencies = [
    "absl-py",
    "scikit-image",
    "scikit-video",
    "optax",
    "chex",
    "dm-pix",
    "scikit-learn",
    "numpy",
    "numba",
    "matplotlib",
    "dm-haiku",
    "trackpy",
    "jax",
]

[project.optional-dependencies]
gpu = ["jax[cuda12]"]

[tool.setuptools]
packages = ["deeptangle"]

[project.urls]
homepage = "https://github.com/alonfnt/deeptangle"
repository = "https://github.com/alonfnt/deeptangle"

